--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .App {
-  text-align: center;
+  text-align: left;
 }
 
 .App-logo {
@@ -11,6 +11,21 @@
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
+}
+
+.errmsg{
+  color: red;
+}
+app-check{
+  height:20px;
+  width:20px;
+  margin: 1;
+}
+.header{
+  width: 100%;
+  background-color: blue;
+  color: #fff;
+  padding: 1%;
 }
 
 .App-header {
